--- a/index.html
+++ b/index.html
@@ -2,9 +2,29 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ICONICS'26 - International Conference on Computer Science</title>
+
+    <!-- Primary Meta Tags -->
+    <title>ICONICS'26 - International Conference on Innovations in Computer Science</title>
+    <meta name="title" content="ICONICS'26 - International Conference on Innovations in Computer Science" />
+    <meta name="description" content="Join researchers from around the world at ICONICS'26, NED University Karachi. Submit papers on AI, Quantum Computing, Cybersecurity & more. October 10-11, 2026." />
+    <meta name="keywords" content="ICONICS, Computer Science Conference, NED University, AI, Quantum Computing, Cybersecurity, Research Conference, Karachi" />
+    <meta name="author" content="NED University of Engineering & Technology" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://iconics2026.vercel.app/" />
+    <meta property="og:title" content="ICONICS'26 - International Conference on Innovations in Computer Science" />
+    <meta property="og:description" content="Join researchers from around the world at ICONICS'26, NED University Karachi. October 10-11, 2026." />
+    <meta property="og:image" content="/images/Banner-4.png" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://iconics2026.vercel.app/" />
+    <meta property="twitter:title" content="ICONICS'26 - International Conference on Innovations in Computer Science" />
+    <meta property="twitter:description" content="Join researchers from around the world at ICONICS'26, NED University Karachi. October 10-11, 2026." />
+    <meta property="twitter:image" content="/images/Banner-4.png" />
   </head>
   <body>
     <div id="root"></div>
